# Reminders

./: .gitignore  CMakeLists.txt  build.sh
include/: rem_utils.h  util.h
src/: main.cpp  rem_utils.cpp
ui/include/: add_reminde_button.h  card_widget.h  main_widget.h  main_window.h  notice_item.h  notice_list.h  notice_view.h  notice_window.h
ui/src/: add_reminde_button.cpp  card_widget.cpp  main_widget.cpp  main_window.cpp  notice_item.cpp  notice_list.cpp  notice_view.cpp  notice_window.cpp
